starting contact section/overlap between sections fixed

--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ h1 {
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
 }
 
@@ -65,7 +65,7 @@ h1 {
 /* NAV */
 #nav-bar {
   align-self: center;
-  margin-right: 100px;
+  margin-right: 50px;
   margin-top: 45px;
 }
 
@@ -80,6 +80,7 @@ h1 {
   text-transform: uppercase;
   font-size: 80%;
   font-weight: 400;
+  letter-spacing: 1.5px;
   padding-bottom: 5px;
 }
 
@@ -111,7 +112,7 @@ h1 {
   grid-template-columns: 1fr 2fr 1fr;
   height: 100vh;
   background: rgb(243, 240, 240);
-  row-gap: 3em;
+  row-gap: 2em;
 }
 
 .tittle {
@@ -122,7 +123,7 @@ h1 {
 }
 
 h2 {
-  padding-top: 50px;
+  padding-top: 60px;
   text-align: center;
   max-width: 400px;
 }
@@ -158,10 +159,10 @@ h2:after {
   align-self: center;
 }
 
-/* PLANS */
+/* HOW IT WORKS */
 
 #works {
-  height: 100vh;
+  min-height: 100vh;
 }
 
 #works p {
@@ -238,4 +239,13 @@ h2:after {
       'box2'
       'box3';
   }
+}
+
+/* CONTACT US */
+
+#contact-img {
+  display: block;
+  width: 100vw;
+  height: 460px;
+  margin-top: 40px;
 }
